--- a/About me/index.html
+++ b/About me/index.html
@@ -18,7 +18,7 @@
 
 <header>
    <!-- the header shows logo and page title-->
-   <img src="IMG/logo-96X96.svg" alt="Blue oragmi logo">
+   <img src="img/logo-96X96.svg" alt="Blue oragmi logo">
    <h1>Web Dev I</h1>
 </header> 
 
@@ -27,7 +27,7 @@
 
    <section id="hero">
       <!--hero section: shows profile image, name and location-->
-   <img src="IMG/avataaars.png" alt="Avatar picture of me">
+   <img src="img/avataaars.png" alt="Avatar picture of me">
    <div>
       <p>Joe Cherry</p>
       <p>Hunterdon New Jersey</p>
