Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
  <!-- bio section!: personal info (not too personal)-->
 
+ <h2>Biography:</h2>
+
  <div>
  <p> I want to be...</p>
 
@@ -49,6 +51,22 @@
  <p><a href ="https://juicyblendstore.com/">My Shopify Dropping Website!</a> </p>
  </div>
     </section> 
+
+    <section id="hobbies">
+      <h2>Hobbies:</h2>
+
+      <ul>
+            <li>Snowboarding</li>
+            <li>Day trading the NYSE</li>
+            <li>Vacations!</li>
+            <li>Video games (Sons of the Forest)</li>
+            <li>Fishing and hiking</li>
+            <li>GYM</li>
+      </ul>
+
+    </section>
+
+    </section>
 
     <footer>
 
