Adding photo gallery

--- a/index.html
+++ b/index.html
@@ -68,6 +68,38 @@
 
     </section>
 
+    <section id="gallery">
+
+      <h2>Photo Gallery</h2>
+
+      <hr>
+
+      <figure>
+         <img src="img/snowboarding-640w.jpg.jpg" alt="Snowboarding">
+         <figcaption>Snowboarding at Camelback with friends</figcaption>
+
+      </figure>
+
+      <hr>
+
+      <figure>
+
+         <img src="img/desk-640w.jpg.jpg" alt="desk">
+         <figcaption>Day Trading the NYSE</figcaption>
+
+      </figure>
+
+      <hr>
+
+      <figure>
+
+         <img src="img/bahamas-640w.jpg.jpg" alt="bahamas">
+         <figcaption> Cruise to the Bahamas (CoCo Cay)</figcaption>
+
+      </figure>
+
+    </section>
+
     <footer>
 
     © 2022 - Joe Cherry
