--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
         </div>
     </article>
 
+     <h2> Videos!</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n26LnZatwRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+    
+
     <footer>
 
     © 2022 - Joe Cherry
