--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Righteous&display=swap" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/nav.css" rel="stylesheet">
 
  </head>
  <body>
@@ -23,7 +24,7 @@
     <div class="logo">
       <img src="IMG/logo-96X96.svg" alt="Blue oragmi logo">
       <h1>Web Dev I</h1></div>
-      
+
     <div class="navbar-links">
       <ul>
         <li><a href="#bio">Bio</a></li>
