--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
    <nav class="navbar">
     <div class="logo">
-      <img src="IMG/logo-96X96.svg" alt="Blue oragmi logo">
+      <img src="New Logo.svg" alt="Orange JC logo">
       <h1>Web Dev I</h1></div>
 
     <div class="navbar-links">
