--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
    
    <nav class="navbar">
     <div class="logo">
-      <img src="New Logo.svg" alt="Orange JC logo">
+      <img src="img/New Logo.svg" alt="Orange JC logo" width="300" height="300">
+
       <h1>Web Dev I</h1></div>
 
     <div class="navbar-links">
@@ -43,7 +44,7 @@
 
    <section id="hero">
       <!--hero section: shows profile image, name and location-->
-   <img src="IMG/avataaars.png" alt="Avatar picture of me">
+   <img src="img/better-image-of-me.jpg" alt="Avatar picture of me">
    <div>
       <p>Joe Cherry</p>
       <p>Hunterdon New Jersey</p>
@@ -62,7 +63,7 @@
 
  <P>Much better at understanding coding as a whole since i've never dabbled with any coding before it really interests me!</P>
 
- <p> A lot of inside work though being in an online class so I also want to be outside snowboarding with the boys</p>
+ <p> Furthermore I am a outdoor enthusiast who resides in Central Jersey. I have a deep appreciation for nature and can often be found exploring nearby parks and hiking trails. In addition to the outdoors, I am also passionate about finding new ways to make money and develop valuable skills. I believe that web development skills can be applied to a wide range of industries, from finance to healthcare, and I am eager to see where these skills will take me. Data Analytics is a high demand position and something that peaks my interest, since you need to use web-based data visualization tools to analyze and present complex data sets. Overall, web development is a versatile and in-demand skill that can open up a wide range of career opportunities in the tech industry.</p>
 
  <p><a href ="https://juicyblendstore.com/">My Shopify Dropping Website!</a> </p>
  </div>
@@ -72,7 +73,7 @@
       <h2>Hobbies:</h2>
 
       <ul>
-      <li>Snowboarding</li>
+      <li>Snowboarding - </li>
       <li>Day trading the NYSE</li>
       <li>Vacations!</li>
       <li>Video games (Sons of the Forest)</li>
@@ -194,7 +195,10 @@
       </form>
     </section>
     
-    
+    <img src="better-image-of-me.jpg" style="border: 8px solid #000000;">
+
+    <img src="better-image-of-me.jpg" style="border: 2px solid; border-image: linear-gradient(to right, #000000, #ffffff) 1;">
+
 
     <footer>
 
