--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
 
 
     <footer>
-
+      <a href="https://github.com/RVCC-IDMX/about-me-Joe-Cherry">Github Repository</a>
+      
     © 2022 - Joe Cherry
 
     </footer>
